coffee-shop-serverless/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: order-processing-workflow-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: rt-order-processing-workflow.kogito
      http:
        paths:
          - path: /
            backend:
              serviceName: order-processing-workflow
              servicePort: 80
